# dayli

./: .env.example  .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/api/: dependencies.py  main.py
apps/api/routes/: chat.py  sessions.py
apps/mobile/: App.tsx  app.json  package.json
apps/web/: index.html
apps/worker/: main.py
dayli/: __init__.py
dayli/agents/: __init__.py  calendar_agent.py  parser_agent.py  planner_agent.py  response_agent.py  validator_agent.py
dayli/api/: __init__.py
dayli/core/: __init__.py  config.py  exceptions.py  types.py
dayli/domain/: __init__.py
dayli/llm/: client.py  guardrails.py  model_registry.py  structured_output.py
dayli/memory/: __init__.py  conversation_memory.py  session_store.py  summary_manager.py  user_preferences.py
dayli/observability/: __init__.py  audit_log.py  metrics.py  tracing.py
dayli/orchestration/: __init__.py  agent_router.py  conversation_manager.py  state_machine.py  workflow.py
dayli/prompts/: calendar.txt  parser.txt  planner.txt  response.txt  validator.txt
dayli/repositories/: audit_repository.py  event_repository.py  memory_repository.py  session_repository.py
dayli/tools/: __init__.py  availability_tools.py  datetime_tools.py
docs/: dayli_technical_report.aux  dayli_technical_report.out  dayli_technical_report.tex  dayli_technical_report.toc
notebooks/: calendar_api_capabilities_playground.ipynb  dayli_calendar_playground.ipynb
scripts/: google_auth.py  replay_conversation.py  seed_dev_data.py
tests/unit/: test_chat.py  test_health.py
(+25 files in other folders)
